Refactored js code

--- a/promise.html
+++ b/promise.html
@@ -7,28 +7,7 @@
     <title>ES6 Promise</title>
 </head>
 <body>
-    <script>
-        function pro(x, y) {
-            return new Promise(function (resolve, reject) {
-                console.log("Please wait....");
-                var p = x + y;
-                setTimeout(() => {
-                    if (p) {
-                        resolve(`Result is ${p}`);
-
-                    } else {
-                        reject("Wrong input");
-                    }
-                }, 4000);
-            });
-        }
-
-        pro(10, 20).then((result)=> {
-            console.log(result);
-        }).catch((error) => {
-            console.log(error);
-        });
-    </script>
+    <script src="assets/js/promise.js"></script>
 </body>
 
 </html>
